# mesh-editing

./: CMakeLists.txt  README.md
doc/: Mesh Editing with Poisson-Based Gradient Field Manipulation阅读笔记.md
src/: main.cpp  mesh_editing.h  mesh_eidting.cpp  testpmp.cpp
